Fraction Matcher: Internationalized
# 0.00.85 (65145) Jun 15, 2012
Fraction Matcher: Only include levels 7-8 in the standalone Fraction Matcher, not in the Fractions Intro sim
Fraction Matcher: Added improper fractions to levels 7-8
# 0.00.84 (65129) Jun 15, 2012
Fraction Matcher: Added levels 7-8
Fraction Matcher: Vertical bars fill from the left
Fraction Matcher: Rewrote level creation algorithm
Fraction Matcher: Made sound button and timer buttons keep the hand cursor when pressed in
Fraction Matcher: Made sound button change icon when pressed in
Fraction Matcher: Made sound and timer buttons turn green when pressed in
# 0.00.83 (65090) Jun 15, 2012
Fraction Matcher: Changed pattern on startup screen
Fraction Matcher: Reworded buttons
# 0.00.82 (64985) Jun 12, 2012
Removed dependency on xstream
Fraction Matcher: Wired up new startup/level selection screen
Fraction Matcher: Added new startup/level selection screen
Fraction Matcher: Fixed: Red wasn't appearing correctly for fractions > 1
Build a fraction tab: Fixed: scoring cells weren't flashing red for level 1
# 0.00.81 (64935) Jun 11, 2012
Fraction Matcher: Added red as a representation color
Fraction Matcher: Always show the "check answer" button on the left side
Fraction Matcher: Made the big yellow equals sign have square corners instead of rounded
Fraction Matcher: Fixed: For fractions > 1, sometimes the bar on the number line uses green instead of the representation color
Fraction Matcher: Fixed the stroke outline anomalies in polygon strokes
Build a fraction tab: On higher levels, it shouldn't highlight when you get the right value--the user has to drag it there to check
Build a fraction tab: Added a level
Build a fraction tab: Made it possible to have more than 3 scoring cells
Build a fraction tab: Fixed: Score went to -1 when popping out a single fraction from a non-complete level.
Build a fraction tab: Added score readout: each completed level is worth one point